# profiling

./: README.md
pytorch/: README.md  pyproject.toml
pytorch/docs/: walkthrough.md
pytorch/scripts/: run_all.sh  run_nsys.sh
pytorch/src/profiling_demo/: __init__.py  cli.py  data.py  model.py  profile_utils.py  scenarios.py  step.py
